<resources>
    <string name="app_name" />
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="the_randomizer">THE RANDOMIZER</string>
    <string name="add_new_set">Add New Set</string>
    <string name="save">Save</string>
    <string name="enter_set_name">Enter Set Name</string>
    <string name="randomize">Randomize</string>
    <string name="edit_set">Edit Set</string>
    <string name="enter_new_item">Enter New Item</string>
    <string name="add_item">Add Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="randomize_again">Randomize Again</string>
    <string name="choose_another_set">Choose Another Set</string>
    <string name="info_blurb">Create sets of items, add items to them and click Randomize to let The Randomizer pick one for you.</string>
    <string name="view_sets">View Sets</string>
    <string name="back">Back</string>
    <string name="change_set_colour">Change Set Colour</string>
    <string name="pink">Pink</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="change_set_color">Change Set Color</string>
</resources>